[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Sprites/scissors.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Pointer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/plus.png" type="Texture" id=4]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Sprites/disk.png" type="Texture" id=7]
[ext_resource path="res://Sprites/recolor.png" type="Texture" id=8]

[sub_resource type="GDScript" id=7]
script/source = "extends Camera2D

onready var animation_player = $AnimationPlayer

func pan_up():
	animation_player.play(\"pan_up\")
"

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -305, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../UILayer/GUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "pan_down"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -305, -0.25, 0, 1, 4.01303, 800, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../UILayer/GUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "pan_up"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 800, -0.3, 579.909, 0.3, -579.909, -305, -0.4, -8.99301, 0.4, 8.99301 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../UILayer/GUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_bottom = 45.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 9
border_color = Color( 0.682353, 0.12549, 0.0705882, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 35.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_bottom = 37.0
bg_color = Color( 0, 0.0705882, 0.0980392, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 5
border_color = Color( 0.682353, 0.12549, 0.0705882, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 30.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color( 0.027451, 0.027451, 0.027451, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 9
border_color = Color( 0, 0.372549, 0.45098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 30.0
anti_aliasing = false

[node name="Board" type="Node"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -305 )
current = true
script = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera"]
autoplay = "pan_up"
anims/RESET = SubResource( 1 )
anims/pan_down = SubResource( 10 )
anims/pan_up = SubResource( 2 )

[node name="Edges" type="Node2D" parent="."]

[node name="Ground" type="Polygon2D" parent="."]
color = Color( 0, 0.0705882, 0.0980392, 1 )
polygon = PoolVector2Array( -3000, -5, 3000, -5, 3000, 3000, -3000, 3000 )

[node name="Pointer" parent="." instance=ExtResource( 3 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="UILayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -1024.0
margin_right = 288.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -164.0
custom_constants/margin_right = 50
custom_constants/margin_left = 25
custom_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="UILayer/GUI/MarginContainer"]
margin_left = 25.0
margin_right = 553.0
margin_bottom = 114.0

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GUI/MarginContainer/CenterContainer"]
margin_top = 10.0
margin_right = 528.0
margin_bottom = 104.0
custom_constants/separation = 20

[node name="Remove" type="Button" parent="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 94.0
theme = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_pressed = Color( 0, 0.372549, 0.45098, 1 )
custom_constants/hseparation = 10
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 2 )

[node name="Recolor" type="Button" parent="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 254.0
margin_bottom = 94.0
theme = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_pressed = Color( 0, 0.372549, 0.45098, 1 )
custom_constants/hseparation = 10
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 8 )

[node name="Add" type="Button" parent="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 274.0
margin_right = 391.0
margin_bottom = 94.0
theme = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_pressed = Color( 0, 0.372549, 0.45098, 1 )
custom_constants/hseparation = 10
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 4 )

[node name="Save" type="Button" parent="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 411.0
margin_right = 528.0
margin_bottom = 94.0
theme = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0, 0.372549, 0.45098, 1 )
custom_colors/font_color_pressed = Color( 0, 0.372549, 0.45098, 1 )
custom_constants/hseparation = 10
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 7 )

[connection signal="pressed" from="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer/Recolor" to="." method="_on_Recolor_pressed"]
[connection signal="pressed" from="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="UILayer/GUI/MarginContainer/CenterContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
